--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,103 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <canvas id="polyhedronRenderer"></canvas>
-    <label><input type="checkbox" id="perspSwitcher" checked>透视投影</label><br>
-    <label><input type="checkbox" id="faceVisibleSwitcher" checked>显示面</label><br>
-    <label><input type="checkbox" id="wireframeVisibleSwitcher" checked>显示边</label><br>
-    <label><input type="checkbox" id="verticesVisibleSwitcher" checked>显示顶点</label><br>
-    <label><input type="checkbox" id="axisVisibleSwitcher" checked>显示坐标轴</label><br>
-    面不透明度：<input type="range" min="0.1" max="1" value="1" step="0.01" id="facesOpacitySlider"><br>
-    边和顶点尺寸：<input type="range" min="0.1" max="2" value="0.5" step="0.01" id="wireframeAndVerticesDimSlider"><br>
-    投影距离：<input disabled type="range" min="0.1" max="100" value="3" step="0.01" id="projectionDistanceSlider"><br>
-    XY 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotXYSlider"><br>
-    XZ 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotXZSlider"><br>
-    XW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotXWSlider"><br>
-    YZ 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotYZSlider"><br>
-    YW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotYWSlider"><br>
-    ZW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotZWSlider"><br>
-    <input type="file" id="fileInput">
+    <label><input type="checkbox" id="perspSwitcher" checked />透视投影</label
+    ><br />
+    <label
+      ><input type="checkbox" id="faceVisibleSwitcher" checked />显示面</label
+    ><br />
+    <label
+      ><input
+        type="checkbox"
+        id="wireframeVisibleSwitcher"
+        checked />显示边</label
+    ><br />
+    <label
+      ><input
+        type="checkbox"
+        id="verticesVisibleSwitcher"
+        checked />显示顶点</label
+    ><br />
+    <label
+      ><input
+        type="checkbox"
+        id="axisVisibleSwitcher"
+        checked />显示坐标轴</label
+    ><br />
+    面不透明度：<input
+      type="range"
+      min="0.1"
+      max="1"
+      value="1"
+      step="0.01"
+      id="facesOpacitySlider" /><br />
+    边和顶点尺寸：<input
+      type="range"
+      min="0.1"
+      max="2"
+      value="0.5"
+      step="0.01"
+      id="wireframeAndVerticesDimSlider" /><br />
+    投影距离：<input
+      disabled
+      type="range"
+      min="0.1"
+      max="100"
+      value="3"
+      step="0.01"
+      id="projectionDistanceSlider" /><br />
+    XY 旋转：<input
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotXYSlider" /><br />
+    XZ 旋转：<input
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotXZSlider" /><br />
+    XW 旋转：<input
+      disabled
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotXWSlider" /><br />
+    YZ 旋转：<input
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotYZSlider" /><br />
+    YW 旋转：<input
+      disabled
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotYWSlider" /><br />
+    ZW 旋转：<input
+      disabled
+      type="range"
+      min="-360"
+      max="360"
+      value="0"
+      step="0.01"
+      id="rotZWSlider" /><br />
+    <input type="file" id="fileInput" />
   </body>
 </html>
