使用 WebWorker 实现了异步处理网格数据，并添加了处理进度条。
还更新了 README.md.

--- a/src/index.html
+++ b/src/index.html
@@ -114,5 +114,6 @@
       id="rotZWSlider" /><br />
     <input type="file" id="fileInput" />
     <div id="info" class="info"></div>
+    <div id="prog" class="prog"></div>
   </body>
 </html>
