用 Nanobar 做了个加载进度条。
修复了在正在加载时上传文件导致进度来回跳的问题。

--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,8 @@
       id="rotZWSlider" /><br />
     <input type="file" id="fileInput" />
     <div id="info" class="info"></div>
-    <div id="prog" class="prog"></div>
+    <div id="progContainer" class="prog-container"
+      ><div id="prog" class="prog"></div
+    ></div>
   </body>
 </html>
