修复加载进度显示的位置不对的问题。
删除测试代码。

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <canvas id="polyhedronRenderer"></canvas>
+    <canvas class="polytope-renderer" id="polytopeRenderer"></canvas>
     <label><input type="checkbox" id="perspSwitcher" checked />透视投影</label
     ><br />
     <label
