--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
       <div>YW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotYWSlider" /></div>
       <div>ZW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotZWSlider" /></div>
       <div><input type="file" id="fileInput" /></div>
+      <div><button id="startRecord" />开始录制</div>
     </div>
 
     <div id="info" class="info"></div>
