添加了正角柱、正反角柱、正双角柱。

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
         <ul id="offSele">
           <li id="polyhedra"><span>多面体</span>
             <ul>
+              <li><div class="inf-families-container"><button id="genPrism" class="gen-inf-families">生成</button><input type="text" value="5/2" id="prismN" class="inf-family-params">角柱</div></li>
+              <li><div class="inf-families-container"><button id="genAntiprism" class="gen-inf-families">生成</button><input type="text" value="5/2" id="antiprismN" class="inf-family-params">角反角柱</div></li>
               <li><span>柏拉图多面体</span>
                 <ul>
                   <li><a href="#" data-path="Platonic/Tetrahedron.off">正四面体</a></li>
@@ -196,6 +198,7 @@
           </li>
           <li id="polychora"><span>多胞体</span>
             <ul>
+              <li><div class="inf-families-container"><button id="genDuoprism" class="gen-inf-families">生成</button><input type="text" value="4" id="duoprismM" class="inf-family-params">–<input type="text" value="5/2" id="duoprismN" class="inf-family-params">角双角柱</div></li>
               <li><span>凸正多胞体</span>
                 <ul>
                   <li><a href="#" data-path="RegularConvex/Pentachoron.off">正五胞体</a></li>
