添加了冠状多面体。
为 HighlightConfigFormat.md 添加了一个 "all" 的示例。

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
               <li><div class="inf-families-container"><button id="genPrism" class="gen-inf-families">生成</button><input type="text" value="5/2" id="prismN" class="inf-family-params">角柱</div></li>
               <li><div class="inf-families-container"><button id="genAntiprism" class="gen-inf-families">生成</button><input type="text" value="5/2" id="antiprismN" class="inf-family-params">角反角柱</div></li>
               <li><div class="inf-families-container"><button id="genTrapezohedron" class="gen-inf-families">生成</button><input type="text" value="5" id="trapezohedronN" class="inf-family-params">方偏方面体</div></li>
+              <li><div class="inf-families-container"><button id="genStephanoid" class="gen-inf-families">生成</button><input type="text" value="7" id="stephanoidN" class="inf-family-params">角间<input type="text" value="2" id="stephanoidA" class="inf-family-params">隔<input type="text" value="3" id="stephanoidB" class="inf-family-params">冠体</div></li>
               <li><span>柏拉图多面体</span>
                 <ul>
                   <li><a href="#" data-path="Platonic/Tetrahedron.off">正四面体</a></li>
