使用了更好的滑块。

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,16 @@
         <div><label><input type="checkbox" id="wireframeVisibleSwitcher" checked />显示边</label></div>
         <div><label><input type="checkbox" id="verticesVisibleSwitcher" checked />显示顶点</label></div>
         <div><label><input type="checkbox" id="axisVisibleSwitcher" checked />显示坐标轴</label></div>
-        <div>缩放：<input type="range" min="0.1" max="100" value="1" step="0.01" id="scaleFactorSlider" /></div>
-        <div>面不透明度：<input type="range" min="0.1" max="1" value="1" step="0.01" id="faceOpacitySlider" /></div>
-        <div>边和顶点尺寸：<input type="range" min="0.01" max="2" value="0.5" step="0.01" id="wireframeAndVerticesDimSlider" /></div>
-        <div>投影距离：<input disabled type="range" min="0.1" max="100" value="3" step="0.01" id="projectionDistanceSlider" /></div>
-        <div>XY 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotXYSlider" /></div>
-        <div>XZ 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotXZSlider" /></div>
-        <div>XW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotXWSlider" /></div>
-        <div>YZ 旋转：<input type="range" min="-360" max="360" value="0" step="0.01" id="rotYZSlider" /></div>
-        <div>YW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotYWSlider" /></div>
-        <div>ZW 旋转：<input disabled type="range" min="-360" max="360" value="0" step="0.01" id="rotZWSlider" /></div>
+        <div><span style="vertical-align: middle;">缩放：</span><div id="scaleFactorSlider"></div></div>
+        <div>面不透明度：<div id="faceOpacitySlider"></div></div>
+        <div>边和顶点尺寸：<div id="wireframeAndVerticesDimSlider"></div></div>
+        <div>投影距离：<div id="projectionDistanceSlider"></div></div>
+        <div>XY 旋转：<div id="rotXYSlider"></div></div>
+        <div>XZ 旋转：<div id="rotXZSlider"></div></div>
+        <div>XW 旋转：<div id="rotXWSlider"></div></div>
+        <div>YZ 旋转：<div id="rotYZSlider"></div></div>
+        <div>YW 旋转：<div id="rotYWSlider"></div></div>
+        <div>ZW 旋转：<div id="rotZWSlider"></div></div>
         <div><input type="file" id="fileInput" class="file-input" /></div>
         <div><input type="file" id="configFileInput" class="config-file-input" /></div>
         <div><button id="uploadOff" />上传 OFF</div>
