配置文件改为 YAML 格式。
现在 a 元素也可以被禁用了；
修复 Bug；
优化文档。

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <div><button id="startRecord" />开始录制</div>
         <div><button disiabled id="stopRecord" />结束录制</div>
         <div><button disiabled id="highlightCells" />高亮胞</div>
-        <div id="jsonEditor"></div>
+        <div id="editor"></div>
       </div>
       
       <div id="seleOff" class="sele-off">
