添加了高亮面的功能；4D模式下顶点和边会同步缩放大小
以及小改材质。

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,10 @@
                       <button disiabled id="highlightCells" class="btn btn-outline-primary">高亮胞</button>
                       <button class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="从下方的 YAML 编辑器中读取高亮配置然后高亮胞（同时自动隐藏面）">?</button>
                     </div>
+                    <div class="btn-group">
+                      <button id="highlightFaces" class="btn btn-outline-primary">高亮面</button>
+                      <button class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="从下方的 YAML 编辑器中读取高亮配置然后高亮胞面（同时自动隐藏面）（仅可用于3D模式）">?</button>
+                    </div>
                   </div>
                   <div id="editor" class="editor"></div>
                 </div>
