添加了两个特殊多面体
恰萨尔多面体和西洛希多面体。

--- a/src/index.html
+++ b/src/index.html
@@ -361,6 +361,22 @@
                       </div>
                     </div>
                     
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#special">
+                          特殊多面体
+                        </button>
+                      </h2>
+                      <div id="special" class="accordion-collapse collapse" data-bs-parent="#polyhedraOffs">
+                        <div class="accordion-body">
+                          <ul class="list-group list-group-flush">
+                            <a href="#" data-path="Special/Szilassi_Polyhedron.off">西洛希多面体</a>
+                            <a href="#" data-path="Special/Császár_Polyhedron.off">恰萨尔多面体</a>
+                          </ul>
+                        </div>
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
