添加了部分均匀复合多面体。

--- a/src/index.html
+++ b/src/index.html
@@ -377,6 +377,41 @@
                       </div>
 
                     </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#uniformCompounds">
+                          均匀复合多面体
+                        </button>
+                      </h2>
+                      <div id="uniformCompounds" class="accordion-collapse collapse" data-bs-parent="#polyhedraOffs">
+                        <div class="accordion-body">
+                          <ul class="list-group list-group-flush">
+                            <a href="#" data-path="Comp/2Tet.off">二复合四面体/星形八面体</a>
+                            <a href="#" data-path="Comp/5Tet.off">五复合四面体/手性二十面体</a>
+                            <a href="#" data-path="Comp/6Tet.off">六复合四面体/扭棱体</a>
+                            <a href="#" data-path="Comp/10Tet.off">十复合四面体/二十二十面体</a>
+                            <a href="#" data-path="Comp/12Tet.off">十二复合四面体/双扭棱体</a>
+                            <a href="#" data-path="Comp/4Oct.off">四复合八面体/扭棱八面体</a>
+                            <a href="#" data-path="Comp/5Oct.off">五复合八面体/小二十二十面体</a>
+                            <a href="#" data-path="Comp/8Oct.off">八复合八面体/旋转自由度双扭棱八面体（此处为六角星双扭棱八面体）</a>
+                            <a href="#" data-path="Comp/10Oct1st.off">第一十复合八面体/扭棱二十面体</a>
+                            <a href="#" data-path="Comp/10Oct2nd.off">第二十复合八面体/大扭棱二十面体</a>
+                            <a href="#" data-path="Comp/20Oct.off">二十复合八面体/双扭棱二十面体</a>
+                            <a href="#" data-path="Comp/3Cube.off">三复合立方体/斜方六面体</a>
+                            <a href="#" data-path="Comp/5Cube.off">五复合立方体/斜方体</a>
+                            <a href="#" data-path="Comp/6Cube.off">六复合立方体/斜方扭棱双六面体</a>
+                            <a href="#" data-path="Comp/5Thah.off">五复合四面半六面体/半斜方手性二十面体</a>
+                            <a href="#" data-path="Comp/20Thah.off">二十复合四面半六面体/扭棱准扭棱斜方二十面体</a>
+                            <a href="#" data-path="Comp/6Pap.off">六复合五角反角柱/大扭棱十二面体</a>
+                            <a href="#" data-path="Comp/12Pap.off">十二复合五角反角柱/大双扭棱十二面体</a>
+                            <a href="#" data-path="Comp/6Starp.off">六复合五角星交错反角柱/大逆扭棱十二面体</a>
+                            <a href="#" data-path="Comp/6Pap.off">十二复合五角星交错反角柱/大逆双扭棱十二面体</a>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+
                   </div>
                 </div>
               </div>
